[package]
name = "bfkmd"
version = "0.9.1"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
edition = "2024"
publish = false

[dependencies]
bufkit-data = "^0.24.0"
chrono = "^0.4.2"
clap = { version = "^3.1.0", features = ["wrap_help", "cargo"]}
crossbeam-channel = "^0.5"
csv = "^1.0.2"
dirs = "^6.0"
itertools = "^0.14"
metfor = "^0.9.0"
pbr = "^1.0.1"
reqwest = { version = "^0.12.28", features = ["blocking"] }
rusqlite = { version = "^0.37", features = ["bundled", "chrono"], default-features = false }
sounding-analysis = "^0.18.1"
sounding-bufkit = "^0.17"
strum = "^0.27"
strum_macros = "^0.27"
textplots = "^0.8.0"
threadpool = "^1.7.1"
unicode-width = "^0.2.2"

[profile.release]
lto = "fat"
